# m17n-db

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  m17n-db-2.0.pc.in  m17n-db-2.pc.in  mdb.rng  mdb.xml
FLT/: KHMR-OTF.flt  LAOO-MULE.flt  Makefile.am  TIBT-MTIB.flt  TIBT-MULE.flt  flt.rng
FORMATS/: 0General.ja.txt  0General.txt  EXPR.ja.txt  EXPR.txt  FLT.ja.txt  FLT.txt  IM-tut.txt  IM-xml.txt  IM.ja.txt  IM.txt
LANGDATA/: Makefile.am
MIM/: Makefile.am  am-sera.mimx  ar-kbd.mim  ar-kbd.mimx  ar-translit.mim  as-itrans.mimx  bn-itrans.mimx  bn-khipro.mim  bn-probhat.mim  bn-unijoy.mim  bn-unijoy.mimx  bo-ewts.mim  bo-ewts.mimx  bo-tcrc.mimx  bo-wylie.mimx  cjk-util.mimx  cmc-kbd.mimx  da-post.mimx  dra-iso-15919-itrans.mim  dv-phonetic.mimx  el-kbd.mimx  en-pn-eqf.mim  eo-vi-sistemo.mim  expr.rnc  expr.rng  fa-isiri.mimx  fr-azerty.mimx  global.mim  global.mimx  grc-mizuochi.mimx  gu-itrans.mim  gu-itrans.mimx  he-kbd.mimx  hi-brahmi-itrans.mim  hi-itrans.mim  hi-itrans.mimx  hi-optitransv2.mim  hi-typewriter.mimx  hr-kbd.mimx  hu-rovas-post.mim  (+94 more)
UNIDATA/: README
icons/: Makefile.am
m4/: codeset.m4  lock.m4  longlong.m4  ulonglong.m4
po/: .gitignore  de.po  eo.po  ja.po  m17n-db.pot  vi.po
