# Makefile.am -- Makefile for the m17n database
# Copyright (C) 2007
#   National Institute of Advanced Industrial Science and Technology (AIST)
#   Registration Number H15PRO112

# This file is part of the m17n database; a sub-part of the m17n
# library.

# The m17n library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public License
# as published by the Free Software Foundation; either version 2.1 of
# the License, or (at your option) any later version.

# The m17n library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with the m17n library; if not, write to the Free
# Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
# Boston, MA 02110-1301, USA.

pkgdata_DATA = ${INPUT_METHOD} mim.rng

EXTRA_DIST = ${INPUT_METHOD} mim.rng

INPUT_METHOD = \
	am-sera.mimx \
	ar-kbd.mimx \
	as-itrans.mimx \
	bn-itrans.mimx \
	bn-unijoy.mimx \
	bo-ewts.mimx bo-tcrc.mimx bo-wylie.mimx \
	cmc-kbd.mimx \
	da-post.mimx \
	dv-phonetic.mimx \
	el-kbd.mimx \
	fa-isiri.mimx \
	fr-azerty.mimx \
	grc-mizuochi.mimx \
	gu-itrans.mimx \
	he-kbd.mimx \
	hi-itrans.mimx hi-typewriter.mimx \
	hr-kbd.mimx \
	hy-kbd.mimx \
	ja-anthy.mimx ja-tcode.mimx ja-trycode.mimx \
	ka-kbd.mimx \
	kk-kbd.mimx kk-arabic.mimx \
	km-yannis.mimx \
	kn-itrans.mimx \
	ko-han2.mimx ko-romaja.mimx \
	lo-kbd.mimx lo-lrt.mimx \
	ml-itrans.mimx \
	my-kbd.mimx \
	or-itrans.mimx \
	pa-itrans.mimx \
	ru-kbd.mimx ru-yawerty.mimx ru-phonetic.mimx \
	sa-harvard-kyoto.mimx \
	si-samanala.mimx si-wijesekera.mimx \
	si-wijesekera-preedit-alt.mimx si-wijesekera-preedit.mimx \
	sk-kbd.mimx \
	sr-kbd.mimx \
	sv-post.mimx \
	ta-itrans.mimx ta-lk-renganathan.mimx \
	te-itrans.mimx \
	th-kesmanee.mimx \
	th-pattachote.mimx \
	th-tis820.mimx \
	ug-kbd.mimx \
	vi-base.mimx vi-viqr.mimx vi-telex.mimx vi-vni.mimx vi-tcvn.mimx \
	zh-py.mimx zh-py-gb.mimx zh-py-b5.mimx \
	zh-tonepy.mimx zh-tonepy-gb.mimx zh-tonepy-b5.mimx \
	zh-cangjie.mimx zh-quick.mimx \
	zh-pinyin.mimx \
	latn-post.mimx latn-pre.mimx \
	syrc-phonetic.mimx \
	zh-bopomofo.mimx \
	unicode.mimx rfc1345.mimx \
	ispell.mimx \
	global.mimx cjk-util.mimx zh-util.mimx

pkgdatadir=$(datadir)/m17n
